--- a/blindfold_game.vcxproj
+++ b/blindfold_game.vcxproj
@@ -325,6 +325,9 @@
     <Xml Include="App\example\xml\test.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="character.hpp" />
+    <ClInclude Include="DeltaTimeManager.hpp" />
+    <ClInclude Include="PlayerManager.hpp" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
