ゲームシステム，使用キャラクターの方向性の確定による仕様の決定に合わせた変更
処理の追加と順序に関しても整理

--- a/blindfold_game.vcxproj
+++ b/blindfold_game.vcxproj
@@ -331,10 +331,10 @@
     <ClInclude Include="DeltaTimeManager.hpp" />
     <ClInclude Include="GamePlay.hpp" />
     <ClInclude Include="IngameCharacter.hpp" />
-    <ClInclude Include="lid.hpp" />
     <ClInclude Include="map_cell.hpp" />
     <ClInclude Include="MapManager.hpp" />
     <ClInclude Include="scene_common.hpp" />
+    <ClInclude Include="spy.hpp" />
     <ClInclude Include="StageSelect.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Title.hpp" />
